# ILAB_2ndYEAR

./: README.md
T00CACHE/: BUILD.md  CMakeLists.txt  README.md  cache-main.cc  cache.hh  makefile  page.hh
T00CACHE/headers/: cache-impl.hh  cache-tests.hh  cache.hh  page.hh
T00CACHE/source/: cache-main.cc  cache-test.cc  cache-tests-main.cc  cache-tests.cc  cache.cc
T00CACHE/testing/: cache-test  t1  t2  t3  test.sh
T01TRIANGLES/: BUILD.md  CMakeLists.txt  README.md  format.sh  genTr.py  preCommit.sh
T01TRIANGLES/headers/: geom3D-gen.hh  geom3D-split.hh  geom3D-tests.hh  geom3D.hh  geometry.hh
T01TRIANGLES/source/: geom3D-line-tests.cc  geom3D-plane-tests.cc  geom3D-point-tests.cc  geom3D-seg-tests.cc  geom3D-tests.cc  geom3D-util-tests.cc  geom3D-vec-tests.cc  geom3D.cc  triangles.cc
T01TRIANGLES/source/geom3D-impl/: line-impl.cc  plane-impl.cc  point-impl.cc  seg-impl.cc  split-impl.cc  tr-union-impl.cc  triangle-impl.cc  utils-impl.cc  vec-impl.cc
T01TRIANGLES/source/geom3D-tests/: line-tests.cc  plane-tests.cc  point-tests.cc  sd-tests.cc  seg-tests.cc  splitting-tests.cc  tests-main.cc  triangle-tests.cc  utils-tests.cc  vec-tests.cc
T01TRIANGLES/source/geom3D-utests/: domain-tests.cc  line-tests.cc  plane-tests.cc  point-tests.cc  sd-tests.cc  seg-tests.cc  split-tests.cc  splitting-tests.cc  tests-main.cc  triangle-tests.cc  utils-tests.cc  vec-tests.cc
T03MATRIX/: BUILD.md  CMakeLIsts.txt  README.md
T03MATRIX/headers/: containers.hh  linear-gen.hh  linear.hh
T03MATRIX/sources/: main.cc
T03MATRIX/sources/containers-utests/: vector-tests.cc
T03MATRIX/sources/linear-utests/: mathvec-tests.cc  matrix-tests.cc  vector-tests.cc
T04ParaCL/: GRAMMAR.md  README.md  format.sh
T04ParaCL/source/: input  lexer.l  main.cc
